# flint-ai

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Directory.Packages.props  Dockerfile  Dockerfile.python  LICENSE  OPENAI_ANTHROPIC_GUIDE.md  README.md  docker-compose.dev.yml  docker-compose.ha.yml  docker-compose.integration.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.python.yml  docker-compose.yml  mkdocs.yml  pg_hba.conf  plan.md  pyproject.toml
.agents/: adapter-specialist.md  api-specialist.md  dag-specialist.md  deploy-specialist.md  queue-specialist.md  router.md  store-specialist.md  test-specialist.md
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-and-a.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  plugin_submission.yml
.github/workflows/: ci.yml  docker-publish.yml  integration.yml  npm-publish.yml  nuget-publish.yml  pypi-publish.yml  smoke.yml
cloud/: README.md  architecture.md  pricing.md
cloud/terraform/: main.tf  outputs.tf  variables.tf
community/: branding.md  discord-setup.md  good-first-issues.md
content/: README.md
content/blog/: 01-why-ai-agents-need-a-queue.md  02-from-langchain-to-production.md  03-building-code-review-pipeline.md
docs/: Dashboard.md  ENV_VARS.md  NpgsqlAdvisory.md  QUICKSTART.md  SDKsExamples.md
docs-site/: architecture.md  cookbook.md  getting-started.md  index.md  python-sdk.md  template.md  typescript-sdk.md
examples/: DEPLOYMENT_GUIDE.md  README.md  __init__.py  claude_vision_example.py  claude_workflow.py  crewai_example.py  demo.py  human_approval.py  openai_server_mode.py  openai_workflow.py  parallel_branches.py  real_ai_workflow.py
examples/advanced/: full_demo.py  prod_demo.py  production_scenarios.py
examples/basics/: demo.py  embedded_mode_guide.py  human_approval.py  parallel_branches.py  server_mode_guide.py
examples/csharp/: SubmitTask.cs
examples/demos/: README.md
examples/openai/: langchain_adapter.py  openai_demo.py  openai_server_mode.py  openai_workflow.py
examples/openai-pipeline/: main.py
examples/python/: claude_agent_example.py  openai_agents_example.py  submit_task.py
examples/quickstart/: 01_embedded_enqueue.py  01_hello_workflow.py  02_embedded_run_once.py  02_with_cost_tracking.py  03_embedded_worker.py  03_sequential_pipeline.py  04_approval_gates.py  04_fanout_fanin.py  05_approval_gate.py  05_parallel_branches.py  06_server_enqueue.py  07_server_run_once.py  README.md
examples/three-agent-pipeline/: main.py
examples/usage_tracking/: README.md  claude_example.py  embedding_image_costs.py  missing_data.py  multi_step_agent.py  observability.py  simple_llm.py
flint_ai/: __init__.py  cli.py  client.py  crewai_adapter.py  engine_manager.py  exceptions.py  fastapi_middleware.py  langchain_adapter.py  models.py  worker.py  workflow_builder.py
flint_ai/adapters/: __init__.py
flint_ai/config/: __init__.py  cost_config.py
flint_ai/server/: __init__.py  __main__.py  agents_config.py  app.py  config.py  embedded.py
flint_ai/usage/: __init__.py  aggregator.py  cost_engine.py  estimation.py  events.py  normalizer.py  observability.py  pricing.py
helm/orchestrator/: Chart.yaml  README.md  values.yaml
k8s/: README.md  api-deployment.yaml  api-service.yaml  configmap.yaml  hpa.yaml  ingress.yaml  pdb.yaml  secret.example.yaml  worker-deployment.yaml
monitoring/: alert-rules.yml  grafana-dashboard-provider.yml  grafana-datasources.yml  prometheus.yml
monitoring/grafana-dashboards/: flint-overview.json
plugins/: README.md  plugin-spec.md  registry.json
proto/: task.proto
scripts/: dev.sh  run.bat  run.py  run.sh
sdks/csharp/: Exceptions.cs  Models.cs  Orchestrator.Sdk.csproj  OrchestratorClient.cs  OrchestratorClientOptions.cs  README.md  WorkflowBuilder.cs
sdks/powershell/: load_test.ps1
sdks/python/: LICENSE  README.md  pyproject.toml
sdks/python/agent_queue_orchestrator/: __init__.py
sdks/python/examples/: autogen_example.py  batch_processing.py  embedded_demo.py  quickstart.py  streaming_example.py  workflow_builder_example.py  workflow_example.py
sdks/python/flint_ai/: __init__.py  autogen_adapter.py  cli.py  client.py  fastapi_middleware.py  workflow_builder.py
sdks/python/flint_ai/adapters/: __init__.py
sdks/python/flint_ai/adapters/core/: registry.py
sdks/python/flint_ai/adapters/crewai/: __init__.py
sdks/python/flint_ai/adapters/langgraph/: __init__.py  agent.py
sdks/python/flint_ai/adapters/openai/: agent.py  tools.py
sdks/python/flint_ai/server/: __init__.py  __main__.py  app.py  config.py  embedded.py
sdks/python/flint_ai/server/agents/: __init__.py
sdks/python/flint_ai/server/api/: __init__.py  agents.py  dashboard.py  workflows.py
sdks/python/flint_ai/server/dag/: __init__.py  context.py  engine.py
sdks/python/flint_ai/server/engine/: concurrency.py  task_engine.py
sdks/python/flint_ai/server/queue/: __init__.py  redis_streams.py
sdks/python/flint_ai/server/static/: index.html
sdks/python/flint_ai/server/static/assets/: index-Yrc6YBcb.js
sdks/python/flint_ai/server/store/: __init__.py  postgres.py
sdks/python/flint_ai/server/ui/: vite.config.ts
sdks/python/flint_ai/server/ui/src/: App.tsx  index.css
sdks/python/flint_ai/server/ui/src/components/: shared.tsx
sdks/python/flint_ai/server/ui/src/pages/: DashboardPage.tsx  TasksPage.tsx
sdks/python/flint_ai/server/worker/: __init__.py
sdks/python/notebooks/: task_quickstart.ipynb  workflow_monitoring.ipynb
sdks/python/tests/: test_adapters.py  test_integration.py  test_langgraph_adapter.py  test_server.py
sdks/typescript/: README.md  package-lock.json  package.json  tsconfig.json
skills/: adapter-dev.md  api-dev.md  cost-tracking.md  dag-engine.md  deployment.md  queue-backend.md  store-backend.md  testing.md
tests/: test_adapters.py  test_e2e.py  test_integration.py  test_production_hardening.py  test_server.py
tools/: run-integration.ps1  smoke-test.ps1
(+207 files in other folders)
